--- a/HTML/Audios.html
+++ b/HTML/Audios.html
@@ -11,16 +11,16 @@
 </header>
 <nav>
   <ul>
-	<li><a href="inicio.html">Inicio</a></li>
-    <li><a href="Listas.html">Listas</a>&nbsp;</li>
-    <li><a href="formulario.html">Formulario</a>&nbsp;</li>
-    <li><a href="Tablas rayas.html">Tablas rayas</a></li>
-	<li><a href="Enlaces.html">Enlaces</a></li>
-	<li><a href="Formatos de texto.html">Formatos de texto</a></li>
-	<li><a href="fuentes.html">Fuentes</a></li>
-	<li><a href="tablas.html">Tablas</a></li>
-	<li><a href="Imagenes.html">Imagenes</a></li>
-	<li><a href="Video.html">Video</a></li>
+	<li><a href="../html/inicio.html">Inicio</a></li>
+    <li><a href="../html/Listas.html">Listas</a>&nbsp;</li>
+    <li><a href="../html/formulario.html">Formulario</a>&nbsp;</li>
+    <li><a href="../html/Tablas rayas.html">Tablas rayas</a></li>
+	<li><a href="../html/Enlaces.html">Enlaces</a></li>
+	<li><a href="../html/Formatos de texto.html">Formatos de texto</a></li>
+	<li><a href="../html/fuentes.html">Fuentes</a></li>
+	<li><a href="../html/tablas.html">Tablas</a></li>
+	<li><a href="../html/Imagenes.html">Imagenes</a></li>
+	<li><a href="../html/Video.html">Video</a></li>
   </ul>
 </nav>
 <main>
