--- a/HTML/inicio.html
+++ b/HTML/inicio.html
@@ -22,7 +22,7 @@
 <h2>Practicas de clase</h2>
 <ul>
 	
-    <li><a href="Formatos de texto.html">Estilos de texto</a>	
+    <li><a href="../html/Formatos de texto.html">Estilos de texto</a>	
     <li><a href="Listas.html">Listas</a>&nbsp;</li>
     <li><a href="formulario.html">Formulario</a>&nbsp;</li>
     <li><a href="Tablas rayas.html">Tablas rayas</a></li>
